/*
Copyright IBM Corp. All Rights Reserved.

SPDX-License-Identifier: Apache-2.0
*/

syntax = "proto3";

import "common/collection.proto";

package lifecycle;

option java_package = "org.hyperledger.fabric.protos.peer.lifecycle";
option go_package = "github.com/hyperledger/fabric/protos/peer/lifecycle";

// InstallChaincodeArgs is the message used as the argument to
// '_lifecycle.InstallChaincode'
message InstallChaincodeArgs {
    string name = 1;
    string version = 2;
    bytes chaincode_install_package = 3; // This should be a marshaled peer.ChaincodeInstallPackage
}

// InstallChaincodeArgs is the message returned by
// '_lifecycle.InstallChaincode'
message InstallChaincodeResult {
    bytes hash = 1;
}

// QueryInstalledChaincodeArgs is the message used as arguments
// '_lifecycle.QueryInstalledChaincode'
message QueryInstalledChaincodeArgs {
    string name = 1;
    string version = 2;
}

// QueryInstalledChaincodeResult is the message returned by
// '_lifecycle.QueryInstalledChaincode'
message QueryInstalledChaincodeResult {
    bytes hash = 1;
}

// QueryInstalledChaincodesArgs currently is an empty argument to
// '_lifecycle.QueryInstalledChaincodes'.   In the future, it may be
// extended to have parameters.
message QueryInstalledChaincodesArgs {
}

// QueryInstalledChaincodesResult is the message returned by
// '_lifecycle.QueryInstalledChaincodes'.  It returns a list of
// installed chaincodes.
message QueryInstalledChaincodesResult {
    message InstalledChaincode {
        string name = 1;
        string version = 2;
        bytes hash = 3;
    }
    repeated InstalledChaincode installed_chaincodes = 1;
}

// ApproveChaincodeDefinitionForMyOrgArgs is the message used as arguments to
// `_lifecycle.ApproveChaincodeDefinitionForMyOrg`.
message ApproveChaincodeDefinitionForMyOrgArgs {
    int64 sequence = 1;
    string name = 2;
    string version = 3;
    bytes hash = 4;
    string endorsement_plugin = 5;
    string validation_plugin = 6;
    bytes validation_parameter = 7;
    common.CollectionConfigPackage collections = 8;
}

// ApproveChaincodeDefinitionForMyOrgResult is the message returned by
// `_lifecycle.ApproveChaincodeDefinitionForMyOrg`. Currently it returns
// nothing, but may be extended in the future.
message ApproveChaincodeDefinitionForMyOrgResult {
}

// CommitChaincodeDefinitionArgs is the message used as arguments to
// `_lifecycle.CommitChaincodeDefinition`.
message CommitChaincodeDefinitionArgs {
    int64 sequence = 1;
    string name = 2;
    string version = 3;
    bytes hash = 4;
    string endorsement_plugin = 5;
    string validation_plugin = 6;
    bytes validation_parameter = 7;
    common.CollectionConfigPackage collections = 8;
}

// CommitChaincodeDefinitionResult is the message returned by
// `_lifecycle.CommitChaincodeDefinition`. Currently it returns
// nothing, but may be extended in the future.
message CommitChaincodeDefinitionResult {
}

// QueryChaincodeDefinition is the message used as arguments to
// `_lifecycle.QueryChaincodeDefinition`.
message QueryChaincodeDefinitionArgs {
    string name = 1;
}

// CommitChaincodeDefinitionResult is the message returned by
// `_lifecycle.QueryChaincodeDefinition`.
message QueryChaincodeDefinitionResult {
    int64 sequence = 1;
    string version = 2;
    bytes hash = 3;
    string endorsement_plugin = 4;
    string validation_plugin = 5;
    bytes validation_parameter = 6;
    common.CollectionConfigPackage collections = 7;
}

// QueryNamespaceDefinitions is the message used as arguments to
// `_lifecycle.QueryNamespaceDefinitions`.
message QueryNamespaceDefinitionsArgs {
}

// QueryNamespaceDefinitions is the message returned by
// `_lifecycle.QueryNamespaceDefinitions`.
message QueryNamespaceDefinitionsResult {
    message Namespace{
        string type = 1;
    }

    map<string,Namespace> namespaces = 1; // A map from namespace name to namespace
}
